--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bible Reader</title>
+    <meta
+      name="description"
+      content="This PWA helps you create personalized Bible reading plans and guides you through each step. Choose from popular pre-made plans to deepen your biblical knowledge and discipline."
+    />
   </head>
   <body>
     <div id="root"></div>
